add synth notebooks

--- a/sgd-support/support-selection-syth-sine.ipynb
+++ b/sgd-support/support-selection-syth-sine.ipynb
@@ -48,7 +48,7 @@
     "n_iters_sgd = 200_000\n",
     "n_iters_gdwd = 5_000\n",
     "n_trajs = 1\n",
-    "lr = 0.1"
+    "lr = 0.5"
    ]
   },
   {
@@ -105,8 +105,8 @@
     "eps = 0.001 * np.random.randn(n)\n",
     "\n",
     "# Generate labels.\n",
-    "y1 = ((x @ W) + eps).reshape(-1, 1) # Linear.\n",
-    "y2 = ((x @ W) - eps).reshape(-1, 1) # Linear rev.\n",
+    "y1 = (np.sin(x @ W) + eps).reshape(-1, 1) # Linear.\n",
+    "y2 = (np.sin(x @ W) - eps).reshape(-1, 1) # Linear rev.\n",
     "\n",
     "x = np.concatenate([x, x], axis=0)\n",
     "y = np.concatenate([y1, y2], axis=0)\n",
@@ -475,6 +475,50 @@
     "for i, g in enumerate(gs1):\n",
     "    im = axs[i].imshow(g, cmap='magma', interpolation='nearest', vmin=vmin, vmax=vmax)\n",
     "    axs[i].set_title(f\"{titles[i]}\")\n",
+    "    axs[i].set_xticks([])\n",
+    "    axs[i].set_yticks([])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws1 = [W1_init, W1_gd, W1_sgd512, W1_sgd32, W1_sgd01]\n",
+    "gs1 = [G1_init, G1_gd, G1_sgd512, G1_sgd32, G1_sgd01]\n",
+    "wtitles = ['W1 at init.', 'GD', 'SGD-512', 'SGD-32', 'SGD-01']\n",
+    "gtitles = ['Gram W1 at init.', 'GD', 'SGD-512', 'SGD-32', 'SGD-01']\n",
+    "\n",
+    "def minmax(x):\n",
+    "    return (x - x.min()) / (x.max() - x.min())\n",
+    "\n",
+    "#ws1 = [minmax(w ** 0.95) for w in ws1]\n",
+    "gs1 = [minmax(g ** 0.95) for g in gs1]\n",
+    "\n",
+    "vmin = min([w.min() for w in ws1])\n",
+    "vmax = max([w.max() for w in ws1])\n",
+    "\n",
+    "fig, axs = plt.subplots(1, len(wtitles), figsize=(16, len(ws1)))\n",
+    "for i, w in enumerate(ws1):\n",
+    "    im = axs[i].imshow(abs(w), cmap='viridis', interpolation='nearest')\n",
+    "    axs[i].set_title(f\"{wtitles[i]}\")\n",
+    "    axs[i].set_xticks([])\n",
+    "    axs[i].set_yticks([])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show();\n",
+    "\n",
+    "vmin = min([g.min() for g in gs1])\n",
+    "vmax = max([g.max() for g in gs1])\n",
+    "\n",
+    "fig, axs = plt.subplots(1, len(gtitles), figsize=(16, len(gs1)))\n",
+    "for i, g in enumerate(gs1):\n",
+    "    im = axs[i].imshow(g, cmap='magma', interpolation='nearest', vmin=vmin, vmax=vmax)\n",
+    "    axs[i].set_title(f\"{gtitles[i]}\")\n",
     "    axs[i].set_xticks([])\n",
     "    axs[i].set_yticks([])\n",
     "\n",
