--- a/sgd-support/support-selection-syth-staircase.ipynb
+++ b/sgd-support/support-selection-syth-staircase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +102,17 @@
     "W[r:] = 0 # Set to zero irrelevant features.\n",
     "\n",
     "# Gaussian noise.\n",
-    "eps = 0.001 * np.random.randn(n)\n",
+    "eps = 0.001 * np.random.randn(n) * 0\n",
+    "\n",
+    "def generate_weighted_staircase_labels(x, W, r):\n",
+    "    y = np.zeros(x.shape[0])\n",
+    "    for i in range(r):\n",
+    "        y += W[i] * np.power(x[:, i], i + 1)\n",
+    "    return y\n",
     "\n",
     "# Generate labels.\n",
-    "y1 = ((x @ W) + eps).reshape(-1, 1) # Linear.\n",
-    "y2 = ((x @ W) - eps).reshape(-1, 1) # Linear rev.\n",
+    "y1 = (generate_weighted_staircase_labels(x, W, r) + eps).reshape(-1, 1)\n",
+    "y2 = (generate_weighted_staircase_labels(x, W, r) - eps).reshape(-1, 1)\n",
     "\n",
     "x = np.concatenate([x, x], axis=0)\n",
     "y = np.concatenate([y1, y2], axis=0)\n",
@@ -423,6 +429,17 @@
    "metadata": {},
    "source": [
     "# gram matrices of first layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W1_gdwd = model_gdwd.W1_post\n",
+    "G1_gdwd = abs(W1_gdwd.T @ W1_gdwd)\n",
+    "plt.imshow(abs(G1_gdwd), cmap='magma', interpolation='nearest')"
    ]
   },
   {
